--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-paginate": "^8.2.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5"
